--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@formspree/react": "^2.4.0",
     "@sideway/address": "^5.0.0",
+    "dotenv": "^16.0.3",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
     "gatsby": "^4.13.1",
@@ -31,12 +32,13 @@
     "gatsby-plugin-sharp": "^4.13.0",
     "gatsby-plugin-sitemap": "^5.13.0",
     "gatsby-plugin-styled-components": "^5.13.0",
-    "gatsby-source-contentful": "^7.11.0",
+    "gatsby-source-contentful": "^7.22.0",
     "gatsby-transformer-sharp": "^4.13.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "slugify": "^1.6.5",
     "styled-components": "^5.3.5",
     "uuid": "^8.3.2"
   },
