--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-bootstrap": "^2.6.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-reveal": "^1.2.2",
     "simple-react-lightbox": "^3.6.9-0",
     "slugify": "^1.6.5",
     "styled-components": "^5.3.5",
