--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-plugin-root-import": "^2.0.8",
     "gatsby-plugin-sharp": "^4.13.0",
     "gatsby-plugin-sitemap": "^5.13.0",
+    "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-plugin-styled-components": "^5.13.0",
     "gatsby-source-contentful": "^7.22.0",
     "gatsby-transformer-sharp": "^4.13.0",
