--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint": "eslint \"src/**/*.js*(x)\" --max-warnings=0"
   },
   "dependencies": {
+    "@ccalamos/gatsby-source-googlemaps-static": "^3.1.1",
     "@emotion/react": "^11.10.5",
     "@formspree/react": "^2.4.0",
     "@sideway/address": "^5.0.0",
@@ -38,6 +39,7 @@
     "gatsby-plugin-styled-components": "^5.13.0",
     "gatsby-source-contentful": "^7.22.0",
     "gatsby-transformer-sharp": "^4.13.0",
+    "google-map-react": "^2.2.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-awesome-reveal": "^4.1.0",
