--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "@ccalamos/gatsby-source-googlemaps-static": "^3.1.1",
     "@emotion/react": "^11.10.5",
     "@formspree/react": "^2.4.0",
+    "@reach/router": "^1.3.4",
     "@sideway/address": "^5.0.0",
     "@tjjjwxzq/simple-react-lightbox": "^3.6.9-0",
+    "babel-plugin-styled-components": "^2.0.6",
     "bootstrap": "^5.2.2",
     "dotenv": "^16.0.3",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
-    "gatsby": "^4.13.1",
+    "gatsby": "^4.8.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^2.24.0",
     "gatsby-plugin-manifest": "^4.13.0",
@@ -36,9 +38,9 @@
     "gatsby-plugin-sharp": "^4.13.0",
     "gatsby-plugin-sitemap": "^5.13.0",
     "gatsby-plugin-smoothscroll": "^1.2.0",
-    "gatsby-plugin-styled-components": "^5.13.0",
+    "gatsby-plugin-styled-components": "^6.9.0",
     "gatsby-source-contentful": "^7.22.0",
-    "gatsby-source-filesystem": "^4.0.0",
+    "gatsby-source-filesystem": "^4.8.1",
     "gatsby-transformer-sharp": "^4.13.0",
     "google-map-react": "^2.2.0",
     "prop-types": "^15.8.1",
@@ -57,7 +59,7 @@
     "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-react": "^7.16.7",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.32.0",
+    "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
