--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -80,6 +80,9 @@ jobs:
           PREFIX_PATHS: 'true'
           CONTENTFUL_ACCESS_TOKEN: ${{ secrets.CONTENTFUL_ACCESS_TOKEN }}
           CONTENTFUL_SPACE_ID: ${{ secrets.CONTENTFUL_SPACE_ID }}
+          GATSBY_FORMSPREE_FORM_ID: ${{ secrets.GATSBY_FORMSPREE_FORM_ID }}
+          GATSBY_GOOGLE_MAP_KEY: ${{ secrets.GATSBY_GOOGLE_MAP_KEY }}
+
         run: ${{ steps.detect-package-manager.outputs.manager }} run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
