Add cookies information

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
     "gatsby": "^3.0.0",
+    "gatsby-cookie-notice": "^1.0.6",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-image": "^2.24.0",
     "gatsby-plugin-manifest": "^4.13.0",
@@ -47,6 +48,7 @@
     "react": "^17.0.2",
     "react-awesome-reveal": "^4.1.0",
     "react-bootstrap": "^2.7.0",
+    "react-cookie-consent": "^8.0.1",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-reveal": "^1.2.2",
